# robotx_tutorial

./: CMakeLists.txt  README.md  package.xml
config/: camera_and_plot.perspective  custom_rosconsole.conf  robotx.perspective  tuning.perspective
docs/: .~lock.getting_started.odt#  getting_started.odt
launch/: cam_plot_perspective.launch  camera_perspective.launch  control_diagnostics.launch  course_control.launch  course_control_better.launch  lake.launch  lake_control.launch  ros_graphandtopic.launch  speed_test.launch  tuning_perspective.launch
nodes/: speed_test_eval.py  speed_test_ex.py  speed_test_solution.py
scripts/: pub_course.sh
