<?xml version="1.0"?>
<package format="2">
  <name>robotx_tutorial</name>
  <version>0.0.1</version>
  <description>The robotx_tutorial package</description>

  <maintainer email="briansbingham@gmail.com">bsb</maintainer>
  <license>GPL</license>
  <url type="website">https://github.com/bsb808/robotx_tutorial</url>

  <depend>kingfisher_gazebo</depend>
  <depend>buoyancy_gazebo_plugin</depend>

  <buildtool_depend>catkin</buildtool_depend>



  <export>
  </export>
</package>
